Fixed sidebar for nav

--- a/index.html
+++ b/index.html
@@ -18,7 +18,31 @@
 </head>
 
 <body>
-   <h1>Hello, world!</h1>
+   <!-- navbar -->
+   <nav class="navbar navbar-expand-md navbar-light">
+      <button class="navbar-toggler ml-auto mb-2 bg-light" type="button" data-toggle="collapse" data-target="#navbarCollapse">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navbarCollapse" class="collapse navbar-collapse">
+         <div class="container-fluid">
+            <div class="row">
+               <!-- sidebar -->
+               <div class="col-lg-3 sidebar fixed-top">
+                  <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">tactotruffles</a>
+                  <div class="bottom-border pb-3">
+                     <img class="rounded-circle mr-3" src="images/admin.jpeg" width="50" height="50" alt="">
+                     <a href="#" class="text-white">Helen Smith</a>
+                  </div>
+               </div>
+               <!-- end sidebar -->
+               <!-- top nav -->
+               <div class="col-lg-9"></div>
+               <!-- end top nav -->
+            </div>
+         </div>
+      </div>
+   </nav>
+   <!-- end navbar -->
 
    <!-- Optional JavaScript -->
    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
