Sidebar navlink CSS

--- a/index.html
+++ b/index.html
@@ -28,11 +28,58 @@
             <div class="row">
                <!-- sidebar -->
                <div class="col-lg-3 sidebar fixed-top">
-                  <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">tactotruffles</a>
+                  <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">tacotruffles</a>
                   <div class="bottom-border pb-3">
                      <img class="rounded-circle mr-3" src="images/admin.jpeg" width="50" height="50" alt="">
                      <a href="#" class="text-white">Helen Smith</a>
                   </div>
+                  <ul class="navbar-nav flex-column mt-4">
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 current">
+                           <i class="fas fa-home fa-lg text-light mr-3"></i>Dashboard
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-user fa-lg text-light mr-3"></i>Profile
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-envelope fa-lg text-light mr-3"></i>Inbox
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-shopping-cart fa-lg text-light mr-3"></i>Sales
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-chart-line fa-lg text-light mr-3"></i>Analytics
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-chart-bar fa-lg text-light mr-3"></i>Charts
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-table fa-lg text-light mr-3"></i>Tables
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-wrench fa-lg text-light mr-3"></i>Settings
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link text-white p-3 mb-2 sidebar-link">
+                           <i class="fas fa-file-alt fa-lg text-light mr-3"></i>Documentation
+                        </a>
+                     </li>
+                  </ul>
                </div>
                <!-- end sidebar -->
                <!-- top nav -->
