--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <div class="container-fluid">
             <div class="row">
                <!-- sidebar -->
-               <div class="col-lg-3 sidebar fixed-top">
+               <div class="col-xl-2 col-md-4 col-lg-3  sidebar  fixed-top">
                   <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">tacotruffles</a>
                   <div class="bottom-border pb-3">
                      <img class="rounded-circle mr-3" src="images/admin.jpeg" width="50" height="50" alt="">
@@ -83,7 +83,42 @@
                </div>
                <!-- end sidebar -->
                <!-- top nav -->
-               <div class="col-lg-9"></div>
+               <div class="col-xl-10 col-md-8 col-lg-9 ml-auto bg-dark  top-navbar fixed-top py-2">
+                  <div class="row align-items-center">
+                     <div class="col-md-4">
+                        <h4 class="text-light text-uppercase mb-0">Dashboard</h4>
+                     </div>
+                     <div class="col-md-5">
+                        <form>
+                           <div class="input-group">
+                              <input type="text" class="form-control search-input" placeholder="Search...">
+                              <button type="button" class="btn btn-white search-button">
+                                 <i class="fas fa-search text-danger"></i>
+                              </button>
+                           </div>
+                        </form>
+                     </div>
+                     <div class="col-md-3">
+                        <ul class="navbar-nav">
+                           <li class="nav-item icon-parent">
+                              <a href="#" class="nav-link icon-bullet">
+                                 <i class="fas fa-comments text-muted fa-lg"></i>
+                              </a>
+                           </li>
+                           <li class="nav-item icon-parent">
+                              <a href="#" class="nav-link icon-bullet">
+                                 <i class="fas fa-bell text-muted fa-lg"></i>
+                              </a>
+                           </li>
+                           <li class="nav-item ml-md-auto">
+                              <a href="#" class="nav-link">
+                                 <i class="fas fa-sign-out-alt text-danger fa-lg"></i>
+                              </a>
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
                <!-- end top nav -->
             </div>
          </div>
