--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                               </a>
                            </li>
                            <li class="nav-item ml-md-auto">
-                              <a href="#" class="nav-link">
+                              <a href="#" class="nav-link" data-toggle="modal" data-target="#logoutModal">
                                  <i class="fas fa-sign-out-alt text-danger fa-lg"></i>
                               </a>
                            </li>
@@ -125,6 +125,28 @@
       </div>
    </nav>
    <!-- end navbar -->
+
+
+
+   <!-- modal -->
+   <div id="logoutModal" class="modal fade">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <div class="modal-header">
+               <h4 class="modal-title">Want to leave?</h4>
+               <button class="close" type="button" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+               Press logout to leave
+            </div>
+            <div class="modal-footer">
+               <button type="button" class="btn btn-success" data-dismiss="modal">Stay Here</button>
+               <button type="button" class="btn btn-danger" data-dismiss="modal">Logout</button>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- end of modal-->
 
    <!-- Optional JavaScript -->
    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
