--- a/index.html
+++ b/index.html
@@ -126,7 +126,297 @@
    </nav>
    <!-- end navbar -->
 
+   <!-- cards -->
+   <section>
+      <div class="container-fluid">
+         <div class="row">
+            <div class="col-lg-9 col-xl-10 col-md-8 ml-auto">
+               <div class="row pt-md-5 mt-md-3 mb-5">
+                  <div class="col-sm-6 col-xl-3 p-2">
+                     <div class="card card-common">
+                        <div class="card-body">
+                           <div class="d-flex justify-content-between">
+                              <i class="fas fa-shopping-cart fa-3x text-warning"> </i>
+                              <div class="text-right text-secondary">
+                                 <h5>Sales</h5>
+                                 <h3>$135,000</h3>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card-footer text-secondary">
+                           <i class="fas fa-sync mr-3"></i>
+                           <span>Updated Now</span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-sm-6 col-xl-3 p-2">
+                     <div class="card card-common">
+                        <div class="card-body">
+                           <div class="d-flex justify-content-between">
+                              <i class="fas fa-money-bill-alt fa-3x text-success"> </i>
+                              <div class="text-right text-secondary">
+                                 <h5>Expenses</h5>
+                                 <h3>$39,000</h3>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card-footer text-secondary">
+                           <i class="fas fa-sync mr-3"></i>
+                           <span>Updated Now</span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-sm-6 col-xl-3 p-2">
+                     <div class="card card-common">
+                        <div class="card-body">
+                           <div class="d-flex justify-content-between">
+                              <i class="fas fa-users fa-3x text-info"> </i>
+                              <div class="text-right text-secondary">
+                                 <h5>Users</h5>
+                                 <h3>15,000</h3>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card-footer text-secondary">
+                           <i class="fas fa-sync mr-3"></i>
+                           <span>Updated Now</span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-sm-6 col-xl-3 p-2">
+                     <div class="card card-common">
+                        <div class="card-body">
+                           <div class="d-flex justify-content-between">
+                              <i class="fas fa-chart-line fa-3x text-danger"> </i>
+                              <div class="text-right text-secondary">
+                                 <h5>Visitors</h5>
+                                 <h3>45,000</h3>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card-footer text-secondary">
+                           <i class="fas fa-sync mr-3"></i>
+                           <span>Updated Now</span>
+                        </div>
+                     </div>
+                  </div>
 
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!-- end cards -->
+
+   <!-- tables -->
+   <section id="tables">
+      <div class="container-fluid">
+         <div class="row mb-5">
+            <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+               <div class="row align-items-center mb-4 mb-xl-0">
+                  <div class="col-12 col-lg-6">
+                     <!-- table 1 -->
+                     <h3 class="text-muted text-center mb-3">Staff Salary</h3>
+                     <table class="table table-striped bg-light text center">
+                        <thead>
+                           <tr class="text-muted">
+                              <th>#</th>
+                              <th>Name</th>
+                              <th>Salary</th>
+                              <th>Date</th>
+                              <th>Contact</th>
+                           </tr>
+                        </thead>
+                        <tbody>
+                           <tr>
+                              <th>1</th>
+                              <td>John</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <button type="button" class="btn btn-sm btn-info">Message</button>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>2</th>
+                              <td>Ann</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <button type="button" class="btn btn-sm btn-info">Message</button>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>3</th>
+                              <td>Mark</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <button type="button" class="btn btn-sm btn-info">Message</button>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>4</th>
+                              <td>Mary</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <button type="button" class="btn btn-sm btn-info">Message</button>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>5</th>
+                              <td>Bob</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <button type="button" class="btn btn-sm btn-info">Message</button>
+                              </td>
+                           </tr>
+                        </tbody>
+                     </table>
+                     <!-- end table 1-->
+                     <!-- table 1 pagination-->
+                     <nav>
+                        <ul class="pagination justify-content-center">
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 <span>&laquo;</span>
+                              </a>
+                           </li>
+                           <li class="page-item active">
+                              <a href="#" class="page-link py-2 px-3">
+                                 1
+                              </a>
+                           </li>
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 2
+                              </a>
+                           </li>
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 3
+                              </a>
+                           </li>
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 <span>&raquo;</span>
+                              </a>
+                           </li>
+                        </ul>
+                     </nav>
+                     <!-- end table 1 pagination-->
+                  </div>
+                  <div class="col-12 col-xl-6">
+                     <!-- table 2 -->
+                     <h3 class="text-muted text-center mb-3">Recent Payments</h3>
+                     <table class="table table-dark table-hover text center">
+                        <thead>
+                           <tr class="text-muted">
+                              <th>#</th>
+                              <th>Name</th>
+                              <th>Prices</th>
+                              <th>Date</th>
+                              <th>Status</th>
+                           </tr>
+                        </thead>
+                        <tbody>
+                           <tr>
+                              <th>1</th>
+                              <td>Monica</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <span class="badge badge-success">Approved</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>2</th>
+                              <td>Nick</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <span class="badge badge-success">Approved</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>3</th>
+                              <td>Alex</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <span class="badge badge-danger">Pending</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>4</th>
+                              <td>Jane</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <span class="badge badge-danger">Pending</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>5</th>
+                              <td>Mikey</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <span class="badge badge-success">Approved</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <th>6</th>
+                              <td>Kate</td>
+                              <td>$2000</td>
+                              <td>05/25/2018</td>
+                              <td>
+                                 <span class="badge badge-danger">Pending</span>
+                              </td>
+                           </tr>
+                        </tbody>
+                     </table>
+                     <!-- end table 2 -->
+                     <!-- table 2 pagination-->
+                     <nav>
+                        <ul class="pagination justify-content-center">
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 Prev
+                              </a>
+                           </li>
+                           <li class="page-item active">
+                              <a href="#" class="page-link py-2 px-3">
+                                 1
+                              </a>
+                           </li>
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 2
+                              </a>
+                           </li>
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 3
+                              </a>
+                           </li>
+                           <li class="page-item">
+                              <a href="#" class="page-link py-2 px-3">
+                                 Next
+                              </a>
+                           </li>
+                        </ul>
+                     </nav>
+                     <!-- table 2 pagination-->
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!-- end tables -->
 
    <!-- modal -->
    <div id="logoutModal" class="modal fade">
