--- a/index.html
+++ b/index.html
@@ -418,6 +418,42 @@
    </section>
    <!-- end tables -->
 
+   <!-- progress task list -->
+   <section>
+      <div class="container-fluid">
+         <div class="row">
+            <!-- nested row for handling sidebar -->
+            <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+               <div class="row mb-4">
+                  <div class="col-xl-6 col-12">
+                     <div class="bg-dark text-white p-4 rounded">
+                        <h4 class="mb-5">Conversion Rates</h4>
+                        <h6 class="mb-3">Google Chrome</h6>
+                        <div class="progress mb-4" style="height: 20px;">
+                           <div class="progress-bar progress-bar-striped font-weight-bold" style="width: 91%">91%</div>
+                        </div>
+                        <h6 class="mb-3 font-weight-bold">Mozilla Firefox</h6>
+                        <div class="progress mb-4" style="height: 20px;">
+                           <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 82%">82%</div>
+                        </div>
+                        <h6 class="mb-3 font-weight-bold">Safari</h6>
+                        <div class="progress mb-4" style="height: 20px;">
+                           <div class="progress-bar progress-bar-striped font-weight-bold bg-danger" style="width: 67%">67%</div>
+                        </div>
+                        <h6 class="mb-3 font-weight-bold">Internet Explorer</h6>
+                        <div class="progress mb-4" style="height: 20px;">
+                           <div class="progress-bar progress-bar-striped font-weight-bold bg-info" style="width: 10%">10%</div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-xl-6 col-12"></div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!-- end progress task list -->
+
    <!-- modal -->
    <div id="logoutModal" class="modal fade">
       <div class="modal-dialog">
