--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
          <div class="row">
             <!-- nested row for handling sidebar -->
             <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
-               <div class="row mb-4">
-                  <div class="col-xl-6 col-12">
+               <div class="row mb-4 align-items-center">
+                  <div class="col-xl-6 col-12 mb-4 mb-xl-0">
                      <div class="bg-dark text-white p-4 rounded">
                         <h4 class="mb-5">Conversion Rates</h4>
                         <h6 class="mb-3">Google Chrome</h6>
@@ -446,7 +446,99 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-xl-6 col-12"></div>
+                  <!-- task list -->
+                  <div class="col-xl-6 col-12">
+                     <h4 class="text-muted p-3 mb-3">Tasks:</h4>
+                     <!-- task item-->
+                     <div class="container-fluid bg-white">
+                        <div class="row py-3 mb-4 task-border align-items-center">
+                           <div class="col-1">
+                              <input type="checkbox" checked>
+                           </div>
+                           <div class="col-sm-9 col-8">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Edit</h6>">
+                                 <i class="fas fa-edit fa-lg text-success mr-2"></i>
+                              </a>
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Delte</h6>">
+                                 <i class="fas fa-trash-alt fa-lg text-danger"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                     <!-- end task item -->
+                     <!-- task item-->
+                     <div class="container-fluid bg-white">
+                        <div class="row py-3 mb-4 task-border align-items-center">
+                           <div class="col-1">
+                              <input type="checkbox" checked>
+                           </div>
+                           <div class="col-sm-9 col-8">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Edit</h6>">
+                                 <i class="fas fa-edit fa-lg text-success mr-2"></i>
+                              </a>
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Delte</h6>">
+                                 <i class="fas fa-trash-alt fa-lg text-danger"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                     <!-- end task item -->
+                     <!-- task item-->
+                     <div class="container-fluid bg-white">
+                        <div class="row py-3 mb-4 task-border align-items-center">
+                           <div class="col-1">
+                              <input type="checkbox" checked>
+                           </div>
+                           <div class="col-sm-9 col-8">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Edit</h6>">
+                                 <i class="fas fa-edit fa-lg text-success mr-2"></i>
+                              </a>
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Delte</h6>">
+                                 <i class="fas fa-trash-alt fa-lg text-danger"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                     <!-- end task item -->
+                     <!-- task item-->
+                     <div class="container-fluid bg-white">
+                        <div class="row py-3 mb-4 task-border align-items-center">
+                           <div class="col-1">
+                              <input type="checkbox" checked>
+                           </div>
+                           <div class="col-sm-9 col-8">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Edit</h6>">
+                                 <i class="fas fa-edit fa-lg text-success mr-2"></i>
+                              </a>
+                           </div>
+                           <div class="col-1">
+                              <a href="#" data-toggle="tooltip" data-placement="top" data-html="true" title="<h6>Delte</h6>">
+                                 <i class="fas fa-trash-alt fa-lg text-danger"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                     <!-- end task item -->
+                  </div>
+                  <!-- end task list -->
                </div>
             </div>
          </div>
@@ -473,6 +565,9 @@
       </div>
    </div>
    <!-- end of modal-->
+
+
+   <!-- endtask list -->
 
    <!-- Optional JavaScript -->
    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
