Recent Customer Activities

--- a/index.html
+++ b/index.html
@@ -546,6 +546,105 @@
    </section>
    <!-- end progress task list -->
 
+   <!-- activities / quick post -->
+   <section>
+      <div class="container-fluid">
+         <div class="row">
+            <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+               <div class="row">
+                  <div class="col-xl-7">
+                     <h4 class="text-muted mb-4">Recent Customer Activity</h4>
+                     <div id="accordion">
+                        <div class="card">
+                           <div class="card-header">
+                              <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#content1">
+                                 <img class="rounded mr-3" src="images/cust1.jpeg" width="50px"> John posted a new comment
+                              </button>
+                           </div>
+                           <div id="content1" class="collapse show" data-parent="#accordion">
+                              <div class="card-body">
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, delectus velit deserunt, provident repudiandae odio ipsam voluptate
+                                 explicabo nostrum quas, voluptas sed! Quas, cum quidem?
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card">
+                           <div class="card-header">
+                              <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#content2">
+                                 <img class="rounded mr-3" src="images/cust2.jpeg" width="50px"> Mark posted a new comment
+                              </button>
+                           </div>
+                           <div id="content2" class="collapse" data-parent="#accordion">
+                              <div class="card-body">
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, delectus velit deserunt, provident repudiandae odio ipsam voluptate
+                                 explicabo nostrum quas, voluptas sed! Quas, cum quidem?
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card">
+                           <div class="card-header">
+                              <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#content3">
+                                 <img class="rounded mr-3" src="images/cust3.jpeg" width="50px"> Annie posted a new comment
+                              </button>
+                           </div>
+                           <div id="content3" class="collapse" data-parent="#accordion">
+                              <div class="card-body">
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, delectus velit deserunt, provident repudiandae odio ipsam voluptate
+                                 explicabo nostrum quas, voluptas sed! Quas, cum quidem?
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card">
+                           <div class="card-header">
+                              <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#content4">
+                                 <img class="rounded mr-3" src="images/cust4.jpeg" width="50px"> Mary posted a new comment
+                              </button>
+                           </div>
+                           <div id="content4" class="collapse" data-parent="#accordion">
+                              <div class="card-body">
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, delectus velit deserunt, provident repudiandae odio ipsam voluptate
+                                 explicabo nostrum quas, voluptas sed! Quas, cum quidem?
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card">
+                           <div class="card-header">
+                              <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#content5">
+                                 <img class="rounded mr-3" src="images/cust5.jpeg" width="50px"> Chuck posted a new comment
+                              </button>
+                           </div>
+                           <div id="content5" class="collapse" data-parent="#accordion">
+                              <div class="card-body">
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, delectus velit deserunt, provident repudiandae odio ipsam voluptate
+                                 explicabo nostrum quas, voluptas sed! Quas, cum quidem?
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card">
+                           <div class="card-header">
+                              <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#content6">
+                                 <img class="rounded mr-3" src="images/cust6.jpeg" width="50px"> Vicky posted a new comment
+                              </button>
+                           </div>
+                           <div id="content6" class="collapse" data-parent="#accordion">
+                              <div class="card-body">
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, delectus velit deserunt, provident repudiandae odio ipsam voluptate
+                                 explicabo nostrum quas, voluptas sed! Quas, cum quidem?
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-xl-5">
+
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!-- end activities / quick post -->
+
    <!-- modal -->
    <div id="logoutModal" class="modal fade">
       <div class="modal-dialog">
