--- a/index.html
+++ b/index.html
@@ -695,7 +695,36 @@
 
    <!-- footer -->
    <footer>
-
+      <div class="container-fluid">
+         <div class="row">
+            <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+               <div class="row border-top pt-3">
+                  <div class="col-lg-6 text-center">
+                     <ul class="list-inline">
+                        <li class="list-inline-item mr-2">
+                           <a href="#" class="text-dark">Taco Truffles</a>
+                        </li>
+                        <li class="list-inline-item mr-2">
+                           <a href="#" class="text-dark">About</a>
+                        </li>
+                        <li class="list-inline-item mr-2">
+                           <a href="#" class="text-dark">Support</a>
+                        </li>
+                        <li class="list-inline-item mr-2">
+                           <a href="#" class="text-dark">Blog</a>
+                        </li>
+                     </ul>
+                  </div>
+                  <div class="col-lg-6 text-center">
+                     <p>&copy; Copyright 2018. Made with
+                        <i class="fas fa-heart text-danger"></i> by
+                        <span class="text-success">Taco Truffles Media</span>
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
    </footer>
    <!-- end footer -->
 
